# wasp_registration_assignment

./: CMakeLists.txt  README.md  get_data.sh  install.sh
include/: scaled_residual.h  simple_residual.h  utils.h
src/: ceres_registration.cpp  icp_registration.cpp  load_and_view_data.cpp  sift_registration.cpp  utils.cpp
